--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "movie-loader",
-  "version": "0.1.0",
+  "name": "linarsy-movie-loader",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
